# tabpfn-databricks

./: .gitignore  databricks.yml
agent/: 00_generate_sales_data.ipynb  01_create_genie_space.ipynb  README.md
agent/apps/: app.py  app.yaml  backend.py  requirements.txt
agent/multiagent/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
agent/multiagent/agent_server/: agent.py  evaluate_agent.py  evaluate_e2e.py  start_server.py  utils.py
agent/multiagent/scripts/: start_app.py
